# napari-plot

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  conftest.py  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: auto_author_assign.yml  make_release.yml  plugin_preview.yml  test_comprehensive.yml  test_pull_requests.yml
.napari-hub/: config.yml
docs/: _toc,yml  conf.py  index.md  index.rst
docs/assets/css/: extra.css
docs/releases/: index.md  release_0_1_5.md
examples/: add_centroids.py  add_few_large_lines.py  add_image.py  add_line_with_apex.py  add_lines_and_span.py  add_many_inflines.py  add_multiline.py  add_multiline_with_different_size.py  add_multiple_infinite_lines.py  add_multiple_regions.py  add_points_with_text.py  add_scatter.py  add_scatter_with_text.py  add_simple_lines.py  api-axlines.py  api-bar-comparison.py  api-bar-stacked.py  api-bar.py  api-hist-cumulative.py  api-hist-overlay.py  api-hist.py  api-hist2d.py  api-plot.py  api-scatter.py  change_tick_formatter.py  demo-centroids.py  demo-infline.py  demo-multi-line.py  demo-region.py  demo-scatter.py  layer-types.py  line-callback.py  live_update_lines.py  live_update_multiple_lines.py  live_update_scatter.py  napari-and-1d-canvas.py  napari-and-1d-live-callback.py  plot-1d-transformed.py  plot-1d.py  plot-centroids.py  (+24 more)
examples_with_napari/: napari-and-1d-canvas.py  napari-and-1d-live-callback.py
misc/: icon.icns  logo.ai  napari-logo-bare.psd  setup.cfg
napari_1d/: __init__.py  _dock_widget.py  _resources.py  viewer.py
napari_1d/_qt/: helpers.py  qt_dialog.py  qt_event_loop.py  qt_layer_buttons.py  qt_layer_controls_container.py  qt_main_window.py  qt_toolbar.py  qt_viewer.py  qt_window.py
napari_1d/_qt/_tests/: test_icon_button.py  test_icon_label.py
napari_1d/_qt/layer_controls/: qt_axis_controls.py  qt_infline_controls.py  qt_layer_buttons.py  qt_layer_controls_base.py  qt_layer_controls_container.py  qt_layers_dialog.py  qt_line_controls.py  qt_multiline_controls.py  qt_region_controls.py  qt_scatter_controls.py  qt_view_toolbar.py
napari_1d/_qt/widgets/: qt_icon_button.py  qt_icon_label.py  qt_image_button.py  qt_line.py  qt_mini_toolbar.py
napari_1d/_tests/: test_dock_widget.py  test_examples.py  test_function.py
napari_1d/_vispy/: axis.py  camera.py  utils.py  vispy_axis_label_visual.py  vispy_box_visual.py  vispy_boxzoom_visual.py  vispy_camera.py  vispy_canvas.py  vispy_centroids_layer.py  vispy_drag_tool.py  vispy_grid_lines_visual.py  vispy_infline_layer.py  vispy_line_layer.py  vispy_region_layer.py  vispy_scatter_layer.py  vispy_span_visual.py  vispy_text_visual.py  vispy_tool.py
napari_1d/_vispy/layers/: centroids.py  infline.py  line.py  region.py  scatter.py
napari_1d/_vispy/overlays/: grid_lines.py  text.py
napari_1d/_vispy/tools/: box.py
napari_1d/_vispy/utils/: axis.py  visual.py
napari_1d/components/: __init__.py  _viewer_key_bindings.py  _viewer_mouse_bindings.py  _viewer_utils.py  axis.py  box.py  boxzoom.py  camera.py  dragtool.py  gridlines.py  span.py  tool.py  utilities.py  viewer_model.py
napari_1d/layers/: __init__.py  base.py  utilities.py
napari_1d/layers/centroids/: __init__.py  _centroids_constants.py  _centroids_utils.py  centroids.py
napari_1d/layers/infline/: __init__.py  _infline.py  _infline_constants.py  _infline_key_bindings.py  _infline_list.py  _infline_mouse_bindings.py  _infline_utils.py  infline.py
napari_1d/layers/line/: __init__.py  line.py
napari_1d/layers/multiline/: _multiline_list.py  _multiline_utils.py  multiline.py
napari_1d/layers/region/: __init__.py  _region.py  _region_constants.py  _region_key_bindings.py  _region_list.py  _region_mouse_bindings.py  _region_utils.py  region.py
napari_1d/layers/scatter/: __init__.py  scatter.py
napari_1d/resources/: __init__.py
napari_1d/resources/qss/: 04_napari1d.qss
napari_1d/utils/: _register.py  utilities.py
napari_plot/: __init__.py  __main__.py  _contribution.py  _dock_widget.py  _plot_widget.py  _scatter_widget.py  conftest.py  napari.yaml  viewer.py  window.py
napari_plot/_app_model/: __init__.py  _app.py  utils.py
napari_plot/_app_model/_tests/: test_app.py  test_constants.py
napari_plot/_app_model/actions/: _layerlist_context_actions.py
napari_plot/_app_model/constants/: __init__.py  _menus.py
napari_plot/_app_model/context/: __init__.py  _context.py  _layerlist_context.py
napari_plot/_qt/: helpers.py  qt_dialog.py  qt_event_loop.py  qt_layer_buttons.py  qt_main_window.py  qt_toolbar.py  qt_viewer.py  qt_welcome.py
napari_plot/_qt/_qapp_model/: __init__.py  (+1 more)
napari_plot/_tests/: test_examples.py  test_import_time.py  test_plot_widget.py  test_scatter_widget.py  utils.py
napari_plot/_vispy/: __init__.py  camera.py  canvas.py
napari_plot/components/: __init__.py  _constants.py  _viewer_key_bindings.py  _viewer_mouse_bindings.py  _viewer_utils.py  axis.py  camera.py  dragtool.py  gridlines.py  layerlist.py  legend.py  tools.py  viewer_model.py
napari_plot/layers/: __init__.py  base.py
napari_plot/resources/: __init__.py
napari_plot/utils/: _register.py  _test_support.py  _tool.py  action_manager.py  color.py  exception.py  plot_api.py  system.py  utilities.py
scripts/: png_to_icon.bat  qtaicons.bat
tests/: test_examples.py  test_lazy_import.py  test_scatter_widget.py
tests/_app_model/: test_app.py  test_constants.py  test_context.py
tests/_qt/: test_qt_layer_control_icons.py  test_qt_splash_screen.py  test_qt_viewer.py  test_qt_window.py
tests/_vispy/: test_vispy_line_layer.py  test_vispy_tools.py
tests/components/: test_tools.py  test_viewer_model.py
tests/layer_controls/: test_qt_infline_controls.py  test_qt_line_controls.py  test_qt_multiline_controls.py  test_qt_region_controls.py  test_qt_scatter_controls.py
tools/: minreq.py
(+139 files in other folders)
