[build-system]
requires = [
  "setuptools >= 42",
  "wheel",
  "setuptools_scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "napari_plot/_version.py"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | examples
    | windows
    | macOS
    | linux
    | dist
    | build
    | vendored
    | _vendor
  )/
  | scripts/minreq.py
)
'''

[tool.check-manifest]
ignore = [
  "bundle.py",
  ".cirrus.yml",
  ".pre-commit-config.yaml",
  "asv.conf.json",
  "codecov.yml",
  "Makefile",
  "mypy.ini",
  "tools/minreq.py",
  "tox.ini",
  ".deepsource.toml",
  "*.pyi",  # added by make typestubs
  "napari_plot/_version.py",  # added during build by setuptools_scm
  "scripts/*.bat",  # scripts
  "renovate.json",
]

[tool.isort]
line_length = 120
profile = "black"
skip_glob = ["*examples/*", "*vendored*", "*_vendor*"]

[tool.ruff]
line-length = 120
ignore = ["E501", "UP006", "UP007", "TCH001", "TCH002", "TCH003"]
target-version = "py38"
fix = true
exclude = [
  ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

[tool.ruff.per-file-ignores]
"napari/_vispy/__init__.py" = ["E402"]
#
#[tool.ruff.isort]
#known-first-party = ["napari_plot"]


[tool.pytest.ini_options]
# These follow standard library warnings filters syntax.  See more here:
# https://docs.python.org/3/library/warnings.html#describing-warning-filters
addopts = "--maxfail=10 --durations=10"

filterwarnings = [
  "error:::napari_plot", # turn warnings from napari into errors
  "ignore::DeprecationWarning:shibokensupport",
  "ignore::DeprecationWarning:ipykernel",
  "ignore::DeprecationWarning:pyreadline",
  "ignore::UserWarning",
  "ignore::DeprecationWarning",
  "ignore::RuntimeWarning",
]

[tool.mypy]
files = "napari"
ignore_missing_imports = true
exclude = [
  "_tests",
]
show_error_codes = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
# # maybe someday :)
# disallow_any_generics = true
# no_implicit_reexport = true
# disallow_untyped_defs = true