[metadata]
name = napari_plot

author = Lukasz G. Migas
author_email = lukas.migas@yahoo.com
license = BSD-3
url = https://github.com/lukasz-migas/napari-1d
description = Plugin providing support for 1d plotting in napari.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/lukasz-migas/napari-1d/issues
    Documentation = https://github.com/lukasz-migas/napari-1d#README.md
    Source Code = https://github.com/lukasz-migas/napari-1d
    User Support = https://github.com/lukasz-migas/napari-1d/issues

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    qtpy
    qtawesome
    napari==0.4.12

[options.extras_require]
pyside2 =
    PySide2>=5.13.2,!=5.15.0
pyside =  # alias for pyside2
    %(pyside2)s
pyqt5 =
    PyQt5>=5.12.3,!=5.15.0
pyqt =  # alias for pyqt5
    %(pyqt5)s
qt =  # alias for pyqt5
    %(pyqt5)s
all =
    %(pyside2)s
testing =
    pytest
    pytest-qt
    scikit-image
dev =
    pre-commit>=2.9.0
    black==20.8b1
    flake8==4.0.1
    PySide2>=5.13.2,!=5.15.0
    %(testing)s


[options.entry_points] 
napari.plugin = 
    napari-plot = napari_plot

[flake8]
ignore = E1137, E722, D413, D401, D205, W503, W504, W605, F841, E203, W1202
max-line-length = 120
exclude =
    .git,
    .vscode,
    .settings,
    __pycache__,
    docs,
    site-source,
    dist,
    setup.py,
statistics=True

[importlinter]
root_package = napari_plot
include_external_packages=True


[importlinter:contract:1]
name = "Forbid import PyQt and PySide"
type = forbidden
source_modules =
    napari_plot
forbidden_modules =
    PyQt5
    PySide2


[importlinter:contract:2]
name = "Block import from qt module in abstract ones"
type = layers
layers=
    napari_plot.layers