[metadata]
name = napari_plot
author = Lukasz G. Migas
author_email = lukas.migas@yahoo.com
license = BSD-3
url = https://github.com/lukasz-migas/napari-1d
description = Plugin providing support for 1d plotting in napari.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
project_urls = 
	Bug Tracker = https://github.com/lukasz-migas/napari-1d/issues
	Documentation = https://github.com/lukasz-migas/napari-1d#README.md
	Source Code = https://github.com/lukasz-migas/napari-1d
	User Support = https://github.com/lukasz-migas/napari-1d/issues

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
setup_requires = setuptools_scm
# add your package requirements here
install_requires = 
	napari-plugin-engine>=0.1.4
	numpy
	qtpy
	qtawesome
	napari>=0.4.13, <0.4.15
	matplotlib
	vispy>=0.9.6

[options.extras_require]
pyside2 = 
	PySide2>=5.13.2,!=5.15.0
pyside = # alias for pyside2
	%(pyside2)s
pyqt5 = 
	PyQt5>=5.12.3,!=5.15.0
pyqt = # alias for pyqt5
	%(pyqt5)s
qt = # alias for pyqt5
	%(pyqt5)s
all = 
	%(pyside2)s
testing = 
	pytest
	pytest-qt
	scikit-image
dev = 
	pre-commit>=2.9.0
	black==22.6.0
	flake8==4.0.1
	PySide2>=5.13.2,!=5.15.0
	%(testing)s
docs =
    mkdocs
    mkdocs-material
    mkdocs-minify-plugin
    mkdocstrings@git+https://github.com/mkdocstrings/mkdocstrings.git@aa77b9c
    mkdocstrings-python@git+https://github.com/mkdocstrings/python.git@480d0c3
    markdown-changelog

[options.entry_points]
console_scripts = 
	napari-plot = napari_plot.__main__:main
napari.manifest = 
	napari_plot = napari_plot:napari.yaml

[flake8]
ignore = E1137, E722, D413, D401, D205, W503, W504, W605, F841, E203, W1202
max-line-length = 120
exclude = 
	.git,
	.vscode,
	.settings,
	__pycache__,
	docs,
	site-source,
	dist,
	setup.py,
statistics = True

[importlinter]
root_package = napari_plot
include_external_packages = True

[importlinter:contract:1]
name = "Forbid import PyQt and PySide"
type = forbidden
source_modules = 
	napari_plot
forbidden_modules = 
	PyQt5
	PySide2

[importlinter:contract:2]
name = "Block import from qt module in abstract ones"
type = layers
layers = 
	napari_plot.layers

[options.package_data]
napari_plot = napari.yaml

