[options.extras_require]
pyside2 = 
    PySide2>=5.13.2,!=5.15.0 ; python_version != '3.8'
    PySide2>=5.14.2,!=5.15.0 ; python_version == '3.8'
pyside6 =
    PySide6>=6.0.0
pyside = # alias for pyside2
	%(pyside2)s
pyqt5 =
	PyQt5>=5.12.3,!=5.15.0
pyqt6 =
	PyQt6>=6.0.0
pyqt = # alias for pyqt5
	%(pyqt5)s
qt = # alias for pyside2
	%(pyside2)s
all = 
	%(pyside2)s
testing = 
	pytest
    pytest-cov
    pytest-qt
	scikit-image
release =
    PyGithub>=1.44.1
    twine>=3.1.1
    gitpython>=3.1.0
    requests-cache>=0.9.2
dev = 
    black
    check-manifest>=0.42
    isort
    pre-commit>=2.9.0
	ruff
    pydantic[dotenv]
	pdbpp
	mypy
	qtreload
	%(testing)s
docs =
    mkdocs
    mkdocs-material
    mkdocs-minify-plugin
    mkdocstrings@git+https://github.com/mkdocstrings/mkdocstrings.git@aa77b9c
    mkdocstrings-python@git+https://github.com/mkdocstrings/python.git@480d0c3
    markdown-changelog

[options.entry_points]
console_scripts = 
	napari-plot = napari_plot.__main__:main
	napari_plot = napari_plot.__main__:main
napari.manifest =
	napari_plot = napari_plot:napari.yaml

[options.package_data]
napari_plot = napari.yaml

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    raise NotImplementedError()
    except ImportError:


[coverage:run]
omit =
    */_vendor/*
    */vendor/*
    */vendored/*

[importlinter]
root_package = napari_plot
include_external_packages = True

[importlinter:contract:1]
name = "Forbid import PyQt and PySide"
type = forbidden
source_modules = 
	napari_plot
forbidden_modules = 
	PyQt5
	PySide2

[importlinter:contract:2]
name = "Block import from qt module in abstract ones"
type = layers
layers = 
	napari_plot.layers


